(gn) #39934 actual fix for menu alignment

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_popover.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_popover.less
@@ -36,6 +36,9 @@
   &.popover-dropdown-5 .popover-content {
     height: 15.5em;
   }
+  &.popover-dropdown-6 .popover-content {
+    height: 18em;
+  }
   .popover-content > .dropdown-menu {
     position: static;
     box-shadow: none;
